--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "prestart": "npm run build",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --exit-child --watch src src/index.ts",
     "start": "node .",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
