--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@types/argon2": "^0.15.0",
     "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
