--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "@types/argon2": "^0.15.0",
+    "@types/cors": "^2.8.13",
     "argon2": "^0.30.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
