--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@prisma/client": "^4.15.0",
     "@types/argon2": "^0.15.0",
     "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.7",
     "argon2": "^0.30.3",
+    "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "http-errors": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
